<resources>
    <string name="app_name">Aladin</string>
    <string name="binding_error">Binding not initialized to reference the view.</string>
    <string name="msg_null">유효하지 않은 값입니다.</string>
    <string name="msg_error">오류가 발생하였습니다.</string>
    <string name="msg_unknown_error">알 수 없는 오류가 발생하였습니다.</string>

    <!-- bottom navigation -->
    <string name="bot_navi_profile">MY</string>
    <string name="bot_navi_home">홈</string>
    <string name="bot_navi_cart">장바구니</string>
    <string name="bot_navi_error">item id(%d) cannot be selected</string>

    <!--    home fragment-->
    <string name="home_search_title">\'이달의 도서\'를 검색해보세요.</string>
    <string name="home_book_kor">국내도서</string>
    <string name="home_book_for">외국도서</string>
    <string name="home_ebook">e Book</string>
    <string name="home_aladin_goods">알라딘 굿즈</string>
    <string name="home_book_new">신간도서</string>
    <string name="home_best">베스트</string>
    <string name="home_event">이벤트</string>
    <string name="home_find_book">분야찾기</string>
    <string name="home_editor_choice">편집장의 선택</string>
    <string name="home_top_seller">지금, 화제의 책!</string>
    <string name="home_aladin_made_goods">알라딘이 만든 사은품</string>

    <!-- home editor choice item -->
    <string name="home_editor_name">%s</string>
    <string name="home_editor_info">%s지음, %s그림 / %s</string>

    <!-- profile fragment -->
    <string name="profile_level_label">LV.</string>
    <string name="profile_level">3</string>
    <string name="profile_nickname">램프의 지니요정</string>
    <string name="profile_welcome">님, 안녕하세요!</string>
    <string name="profile_mileage_label">마일리지</string>
    <string name="profile_mileage">1,000</string>
    <string name="profile_reserves_label">적립금</string>
    <string name="profile_reserves">3,500</string>
    <string name="profile_coupon_label">할인쿠폰</string>
    <string name="profile_coupon">2</string>
    <string name="profile_order_history">주문 내역</string>
    <string name="profile_preparing">준비중</string>
    <string name="profile_preparing_value">0</string>
    <string name="profile_shipping">배송중</string>
    <string name="profile_shipping_value">2</string>
    <string name="profile_delivery_completed">배송 완료</string>
    <string name="profile_delivery_completed_value">1</string>
    <string name="profile_return_exchange_history">반품 / 교환 내역</string>
    <string name="profile_return_value">1</string>
    <string name="profile_return">반품</string>
    <string name="profile_exchange_value">2</string>
    <string name="profile_exchange">교환</string>
    <string name="profile_used_history">중고 팔기 내역</string>
    <string name="profile_total">총&#160;</string>
    <string name="profile_five">5</string>
    <string name="profile_tasks">건</string>
    <string name="profile_sell_aladin_value">3</string>
    <string name="profile_sell_aladin">알라딘에 팔기</string>
    <string name="profile_sell_user_value">2</string>
    <string name="profile_sell_user">회원에게 팔기</string>

    <!-- detail activity -->
    <string name="detail_delivery_author_painter">%s(지은이) ㅣ %s(그림)</string>
    <string name="detail_star_count">4.6</string>
    <string name="detail_heart_count">%,1d</string>
    <string name="detail_cost">%,2d원</string>
    <string name="detail_price">%,2d원</string>
    <string name="detail_delivery_fee_label">배송료</string>
    <string name="detail_delivery_fee">무료</string>
    <string name="detail_carpet_delivery">양탄자 배송</string>
    <string name="detail_carpet_delivery_date">내일(목) 새벽 7시 전 도착 보장</string>
    <string name="detail_ebook_label">전자책</string>
    <string name="detail_ebook_alarm_msg">eBook이 출간되면 알려드립니다.</string>
    <string name="detail_ebook_alarm_btn">eBook 출간 알림 신청</string>
    <string name="detail_book_introduction">책소개</string>
    <string name="detail_show_more">더보기</string>
    <string name="detail_index">목차</string>
    <string name="detail_summary">줄거리</string>
    <string name="detail_review">한 줄 리뷰</string>
    <string name="detail_score_ave">4.6</string>
    <string name="detail_score_max">/ 5.0</string>
    <string name="detail_review_msg">80%의 구매자가\n\"추천해요\"라고 응답했어요</string>
    <string name="detail_review_write">리뷰 작성</string>
    <string name="detail_review_writer">bo***** | 2022.11.11 | 신고</string>
    <string name="detail_review_content">내용이 너무 인상깊었습니다.\n이 책 추천드립니다~!</string>
    <string name="detail_company">(주)알라딘커뮤니케이션</string>
    <string name="detail_service_center">고객센터 1544–1234</string>
    <string name="detail_logout">로그아웃</string>
    <string name="detail_contact">1:1 문의</string>
    <string name="detail_faq">FAQ</string>
    <string name="detail_store_info">중고매장 위치, 영업시간 안내</string>
    <string name="detail_cart">장바구니</string>
    <string name="detail_purchase">구매하기</string>
    <string name="detail_like_success">좋아요가 반영되었습니다.</string>
    <string name="detail_like_cancel">좋아요가 해제되었습니다.</string>
    <string name="detail_cart_success">장바구니에 추가되었습니다.</string>
    <string name="detail_cart_exist">이미 장바구니에 추가된 상품입니다.</string>
    <!-- Cart -->
    <string name="cart_format_price">%,2d원</string>
    <string name="cart_body_count">%1d</string>
    <string name="cart_body_minus">-</string>
    <string name="cart_body_plus">+</string>
    <string name="cart_body_content">11월 7일(월) 밤 11시 잠들기전 배송</string>
    <string name="cart_all">전체</string>
    <string name="cart_price_text">상품금액</string>
    <string name="cart_delivery_fee">배송비</string>
    <string name="cart_0_won">0원</string>
    <string name="cart_total_price">총 결제 예정 금액</string>
    <string name="cart_buy">구매하기</string>
</resources>
