<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/sv_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_profile_user_info_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="32dp"
                    android:background="#e8eaf2">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_profile_user_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="76dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@color/white"
                        android:paddingTop="37dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" >

                        <ImageView
                            android:id="@+id/iv_profile_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="-1dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:src="@drawable/img_profile_profile"/>

                        <TextView
                            android:id="@+id/tv_profile_level_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/BigtitleBold1"
                            android:textColor="@color/grey_4"
                            android:layout_marginBottom="-1dp"
                            app:layout_constraintStart_toEndOf="@id/iv_profile_profile"
                            app:layout_constraintBottom_toTopOf="@id/tv_profile_nickname"
                            android:text="@string/profile_level_label"/>

                        <TextView
                            android:id="@+id/tv_profile_level"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-1dp"
                            app:layout_constraintStart_toEndOf="@id/tv_profile_level_label"
                            app:layout_constraintBottom_toTopOf="@id/tv_profile_nickname"
                            android:textAppearance="@style/PretendardBold28"
                            android:textColor="@color/blue"
                            android:text="@string/profile_level"/>

                        <TextView
                            android:id="@+id/tv_profile_nickname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            app:layout_constraintStart_toEndOf="@id/iv_profile_profile"
                            app:layout_constraintBottom_toBottomOf="@id/iv_profile_profile"
                            android:text="@string/profile_nickname"
                            android:textAppearance="@style/DetailBold1"
                            android:textColor="@color/grey_4" />

                        <TextView
                            android:id="@+id/tv_profile_welcome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@id/tv_profile_nickname"
                            app:layout_constraintBottom_toBottomOf="@id/tv_profile_nickname"
                            android:textAppearance="@style/DetailMedium14Sp"
                            android:textColor="@color/grey_4"
                            android:text="@string/profile_welcome" />

                        <View
                            android:id="@+id/view_profile_user_info_line"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="11dp"
                            android:layout_marginBottom="18dp"
                            android:layout_marginHorizontal="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/iv_profile_profile"
                            android:background="#eaeaea"/>

                        <LinearLayout
                            android:id="@+id/ll_profile_mileage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:paddingBottom="5dp"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginStart="3dp"
                            app:layout_constraintTop_toBottomOf="@id/view_profile_user_info_line"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/view_profile_mileage_line">

                            <TextView
                                android:id="@+id/tv_profile_mileage_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/PretendardRegular14"
                                android:textColor="@color/grey_4"
                                android:text="@string/profile_mileage_label" />

                            <TextView
                                android:id="@+id/tv_profile_milage_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/DetailMedium18Sp"
                                android:textColor="@color/blue"
                                android:text="@string/profile_mileage" />
                        </LinearLayout>

                        <View
                            android:id="@+id/view_profile_mileage_line"
                            android:layout_width="1dp"
                            android:layout_height="0dp"
                            android:background="@color/gray_light"
                            app:layout_constraintTop_toTopOf="@id/ll_profile_mileage"
                            app:layout_constraintBottom_toBottomOf="@id/ll_profile_mileage"/>

                        <LinearLayout
                            android:id="@+id/ll_profile_savings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:paddingBottom="5dp"
                            android:orientation="vertical"
                            android:gravity="center"
                            app:layout_constraintTop_toBottomOf="@id/view_profile_user_info_line">

                            <TextView
                                android:id="@+id/tv_profile_savings_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/PretendardRegular14"
                                android:textColor="@color/grey_4"
                                android:text="@string/profile_savings_label" />

                            <TextView
                                android:id="@+id/tv_profile_savings_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/DetailMedium18Sp"
                                android:textColor="@color/blue"
                                android:text="@string/profile_savings" />
                        </LinearLayout>

                        <View
                            android:id="@+id/view_profile_savings_line"
                            android:layout_width="1dp"
                            android:layout_height="0dp"
                            android:background="@color/gray_light"
                            app:layout_constraintTop_toTopOf="@id/ll_profile_savings"
                            app:layout_constraintBottom_toBottomOf="@id/ll_profile_savings"/>

                        <LinearLayout
                            android:id="@+id/ll_profile_coupon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:paddingBottom="5dp"
                            android:orientation="vertical"
                            android:gravity="center"
                            app:layout_constraintTop_toBottomOf="@id/view_profile_user_info_line">

                            <TextView
                                android:id="@+id/tv_profile_coupon_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/PretendardRegular14"
                                android:textColor="@color/grey_4"
                                android:text="@string/profile_coupon_label" />

                            <TextView
                                android:id="@+id/tv_profile_coupon_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/DetailMedium18Sp"
                                android:textColor="@color/blue"
                                android:text="@string/profile_coupon" />
                        </LinearLayout>

                        <androidx.constraintlayout.helper.widget.Flow
                            android:id="@+id/flow_profile_user_info"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="13dp"
                            app:layout_constraintTop_toBottomOf="@id/view_profile_user_info_line"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:constraint_referenced_ids="ll_profile_mileage,view_profile_mileage_line,ll_profile_savings,view_profile_savings_line,ll_profile_coupon"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/iv_profile_badge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-8dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintTop_toTopOf="@id/cl_profile_user_info"
                        app:layout_constraintEnd_toEndOf="@id/cl_profile_user_info"
                        android:src="@drawable/img_profile_badge_silver" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>