<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.sopt.aladinaos.data.entity.response.Book" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/cart_body_tmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:padding="6dp"
            android:src="@drawable/ic_cart_back"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cb_cart_body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/selector_cart_check"
            android:button="@android:color/transparent"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@id/cart_body_tmp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/cart_body_tmp"
            app:layout_constraintStart_toStartOf="@id/cart_body_tmp"
            app:layout_constraintTop_toTopOf="@id/cart_body_tmp"
            tools:text="&#8203;"/>

        <ImageView
            android:id="@+id/iv_cart_body_cover"
            setImage="@{data.cover}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/cb_cart_body"
            app:layout_constraintTop_toTopOf="@id/cb_cart_body"
            tools:src="@drawable/shape_grey4_fill_0_rect" />

        <TextView
            android:id="@+id/tv_cart_body_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@{data.name}"
            android:textAppearance="@style/IconSemibold1"
            android:textColor="@color/grey_4"
            app:layout_constraintStart_toEndOf="@id/iv_cart_body_cover"
            app:layout_constraintTop_toTopOf="@id/iv_cart_body_cover"
            tools:text="기소영의 친구들" />

        <TextView
            android:id="@+id/tv_cart_body_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{@string/cart_format_price(data.price)}"
            android:textAppearance="@style/TitleSemibold1"
            android:textColor="@color/grey_4"
            app:layout_constraintStart_toStartOf="@id/tv_cart_body_title"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_body_title"
            tools:text="10,800원" />

        <TextView
            android:id="@+id/tv_cart_body_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="11dp"
            android:paddingHorizontal="6dp"
            android:text="@string/cart_body_minus"
            android:textAppearance="@style/IconMedium2"
            android:textColor="@color/grey_4"
            app:layout_constraintStart_toStartOf="@id/tv_cart_body_price"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_body_price" />

        <TextView
            android:id="@+id/tv_cart_body_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textAppearance="@style/IconSemibold1"
            android:textColor="@color/grey_4"
            app:layout_constraintBottom_toBottomOf="@id/tv_cart_body_minus"
            app:layout_constraintStart_toEndOf="@id/tv_cart_body_minus"
            app:layout_constraintTop_toTopOf="@id/tv_cart_body_minus"
            tools:text="1" />

        <TextView
            android:id="@+id/tv_cart_body_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:paddingHorizontal="6dp"
            android:text="@string/cart_body_plus"
            android:textAppearance="@style/IconMedium2"
            android:textColor="@color/grey_4"
            app:layout_constraintBottom_toBottomOf="@id/tv_cart_body_count"
            app:layout_constraintStart_toEndOf="@id/tv_cart_body_count"
            app:layout_constraintTop_toTopOf="@id/tv_cart_body_count" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cart_body_content"
            android:textAppearance="@style/DetailRegular1"
            android:textColor="@color/grey_4"
            app:layout_constraintStart_toStartOf="@id/tv_cart_body_price"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_body_minus" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>